pointers fixed, text-align fixed - block differences

--- a/assets/style/difference.scss
+++ b/assets/style/difference.scss
@@ -117,7 +117,6 @@
 
     &--airbus {
       text-align: right;
-      text-align: left;
       @media (max-width: $mobile) {
         margin-right: 10px;
       }
